[gd_scene load_steps=24 format=3 uid="uid://dqrnbsj51yhih"]

[ext_resource type="Script" uid="uid://basd2gdjb4kmg" path="res://Scripts/SlotMachine.gd" id="1_8qfso"]
[ext_resource type="Texture2D" uid="uid://dedn47ecsgf04" path="res://icon.svg" id="2_bstdy"]
[ext_resource type="Script" uid="uid://dofg2btjnw0aw" path="res://Scripts/SlotMachineConfig.gd" id="2_dq6t6"]
[ext_resource type="Script" uid="uid://qhx628in5qjg" path="res://Scripts/SymbolData.gd" id="3_glh05"]
[ext_resource type="Script" uid="uid://by2utq613keoa" path="res://Scripts/SlotMachineUI.gd" id="3_ui"]
[ext_resource type="Texture2D" uid="uid://ujmkpbyd0qh7" path="res://Sprites/bell.png" id="4_7juld"]
[ext_resource type="Script" uid="uid://rhv7x764486a" path="res://Scripts/SlotMachineReels.gd" id="4_reels"]
[ext_resource type="Texture2D" uid="uid://b0ij47vrg07i" path="res://Sprites/cherry.png" id="5_767e2"]
[ext_resource type="Script" uid="uid://dad2cfpnkfjuj" path="res://Scripts/SlotMachineHandle.gd" id="5_handle"]
[ext_resource type="Texture2D" uid="uid://dm03m3wryeiwv" path="res://Sprites/diamond.png" id="6_4iwc5"]
[ext_resource type="Script" uid="uid://blqws560ts6u1" path="res://Scripts/SlotMachineAudio.gd" id="6_audio"]
[ext_resource type="Texture2D" uid="uid://b0al7t26axc1p" path="res://Sprites/lemon.png" id="7_ivw0y"]
[ext_resource type="Texture2D" uid="uid://bny0ahlko0im6" path="res://Sprites/orange.png" id="8_mjnmi"]
[ext_resource type="Texture2D" uid="uid://dokxymn6lvbda" path="res://Sprites/seven.png" id="9_xlxob"]
[ext_resource type="Texture2D" uid="uid://kuu042ivc8d7" path="res://Sprites/star.png" id="10_gynv6"]

[sub_resource type="Resource" id="Resource_4u8k1"]
script = ExtResource("3_glh05")
symbol_name = ""
symbol_texture = ExtResource("4_7juld")
symbol_index = 0
payout_type = "Coins"
base_payout_amount = 10
two_match_multiplier = 1.5
three_match_multiplier = 3.0
highlight_color = Color(1, 1, 0, 1)
win_particle_color = Color(1, 1, 1, 1)
metadata/_custom_type_script = "uid://bmt2g7hpfxsyq"

[sub_resource type="Resource" id="Resource_mc7p0"]
script = ExtResource("3_glh05")
symbol_name = ""
symbol_texture = ExtResource("5_767e2")
symbol_index = 1
payout_type = "Coins"
base_payout_amount = 10
two_match_multiplier = 1.5
three_match_multiplier = 3.0
highlight_color = Color(1, 1, 0, 1)
win_particle_color = Color(1, 1, 1, 1)
metadata/_custom_type_script = "uid://bmt2g7hpfxsyq"

[sub_resource type="Resource" id="Resource_0sinn"]
script = ExtResource("3_glh05")
symbol_name = ""
symbol_texture = ExtResource("6_4iwc5")
symbol_index = 2
payout_type = "Coins"
base_payout_amount = 10
two_match_multiplier = 1.5
three_match_multiplier = 3.0
highlight_color = Color(1, 1, 0, 1)
win_particle_color = Color(1, 1, 1, 1)
metadata/_custom_type_script = "uid://bmt2g7hpfxsyq"

[sub_resource type="Resource" id="Resource_ekyhq"]
script = ExtResource("3_glh05")
symbol_name = ""
symbol_texture = ExtResource("7_ivw0y")
symbol_index = 3
payout_type = "Coins"
base_payout_amount = 10
two_match_multiplier = 1.5
three_match_multiplier = 3.0
highlight_color = Color(1, 1, 0, 1)
win_particle_color = Color(1, 1, 1, 1)
metadata/_custom_type_script = "uid://bmt2g7hpfxsyq"

[sub_resource type="Resource" id="Resource_akrk8"]
script = ExtResource("3_glh05")
symbol_name = ""
symbol_texture = ExtResource("8_mjnmi")
symbol_index = 4
payout_type = "Coins"
base_payout_amount = 10
two_match_multiplier = 1.5
three_match_multiplier = 3.0
highlight_color = Color(1, 1, 0, 1)
win_particle_color = Color(1, 1, 1, 1)
metadata/_custom_type_script = "uid://bmt2g7hpfxsyq"

[sub_resource type="Resource" id="Resource_8dfvw"]
script = ExtResource("3_glh05")
symbol_name = ""
symbol_texture = ExtResource("9_xlxob")
symbol_index = 5
payout_type = "Coins"
base_payout_amount = 10
two_match_multiplier = 1.5
three_match_multiplier = 3.0
highlight_color = Color(1, 1, 0, 1)
win_particle_color = Color(1, 1, 1, 1)
metadata/_custom_type_script = "uid://bmt2g7hpfxsyq"

[sub_resource type="Resource" id="Resource_6oclk"]
script = ExtResource("3_glh05")
symbol_name = ""
symbol_texture = ExtResource("10_gynv6")
symbol_index = 6
payout_type = "Coins"
base_payout_amount = 10
two_match_multiplier = 1.5
three_match_multiplier = 3.0
highlight_color = Color(1, 1, 0, 1)
win_particle_color = Color(1, 1, 1, 1)
metadata/_custom_type_script = "uid://bmt2g7hpfxsyq"

[sub_resource type="Resource" id="Resource_tggbq"]
script = ExtResource("2_dq6t6")
base_win_chance = 0.3
jackpot_chance = 0.001
spin_cost = 5
minimum_bet = 1
rise_distance = 30.0
rise_duration = 0.3
rise_ease_type = 1
fall_speed_multiplier = 2.0
fall_ease_type = 0
base_spin_duration = 2.0
spin_speed_rps = 8.0
deceleration_duration = 1.0
deceleration_ease = 1
reel_stop_delay = 0.5
final_settle_duration = 0.2
enable_screen_shake = true
shake_small_win = 2.0
shake_medium_win = 5.0
shake_big_win = 8.0
shake_jackpot = 12.0
shake_duration = 0.5
shake_frequency = 8
show_win_highlights = true
highlight_duration = 2.0
result_display_time = 3.0
symbol_scale_on_win = 1.2
master_volume = 1.0
reel_stop_volume = 0.8
win_volume = 1.0
jackpot_volume = 1.2
symbols = Array[ExtResource("3_glh05")]([SubResource("Resource_4u8k1"), SubResource("Resource_mc7p0"), SubResource("Resource_0sinn"), SubResource("Resource_ekyhq"), SubResource("Resource_akrk8"), SubResource("Resource_8dfvw"), SubResource("Resource_6oclk")])
metadata/_custom_type_script = "uid://ddufmvo5nkmah"

[node name="SlotMachine" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8qfso")
config = SubResource("Resource_tggbq")
metadata/_edit_use_anchors_ = true

[node name="UI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_ui")

[node name="TopPanel" type="HBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 50.0
grow_horizontal = 2
alignment = 1

[node name="DebtLabel" type="Label" parent="UI/TopPanel"]
layout_mode = 2
text = "DEBT: $1,000,000"
horizontal_alignment = 1

[node name="VSeparator" type="VSeparator" parent="UI/TopPanel"]
layout_mode = 2

[node name="CoinsLabel" type="Label" parent="UI/TopPanel"]
layout_mode = 2
text = "COINS: 5"
horizontal_alignment = 1

[node name="CenterPanel" type="Control" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResultLabel" type="Label" parent="UI/CenterPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -182.0
offset_top = -99.0
offset_right = 118.0
offset_bottom = -49.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="BottomPanel" type="HBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -80.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="SpinButton" type="Button" parent="UI/BottomPanel"]
layout_mode = 2
text = "SPIN ($5)"

[node name="HSeparator" type="HSeparator" parent="UI/BottomPanel"]
layout_mode = 2

[node name="UpgradeButton" type="Button" parent="UI/BottomPanel"]
layout_mode = 2
text = "UPGRADES"

[node name="HSeparator2" type="HSeparator" parent="UI/BottomPanel"]
layout_mode = 2

[node name="InfoButton" type="Button" parent="UI/BottomPanel"]
layout_mode = 2
text = "INFO"

[node name="ReelManager" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_reels")

[node name="Reels" type="HBoxContainer" parent="ReelManager"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -373.0
offset_top = -112.0
offset_right = 347.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2

[node name="Reel1" type="Panel" parent="ReelManager/Reels"]
clip_contents = true
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 3

[node name="Reel2" type="Panel" parent="ReelManager/Reels"]
clip_contents = true
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 3

[node name="Reel3" type="Panel" parent="ReelManager/Reels"]
clip_contents = true
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 3

[node name="HandleManager" type="Control" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -50.0
offset_right = -14.0
offset_bottom = 50.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("5_handle")

[node name="HandleSprite" type="Sprite2D" parent="HandleManager"]
position = Vector2(25, 51)
scale = Vector2(0.46875, 0.859375)
texture = ExtResource("2_bstdy")

[node name="AudioManager" type="Node" parent="."]
script = ExtResource("6_audio")

[node name="SpinSound" type="AudioStreamPlayer2D" parent="AudioManager"]

[node name="WinSound" type="AudioStreamPlayer2D" parent="AudioManager"]

[node name="LoseSound" type="AudioStreamPlayer2D" parent="AudioManager"]

[node name="EvilLaugh" type="AudioStreamPlayer2D" parent="AudioManager"]

[node name="ReelStopSound" type="AudioStreamPlayer2D" parent="AudioManager"]
